Apply AdminLTE's turbolinks patch

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -1,2 +1,4 @@
-h1 Admin::Dashboard#index
-p Find me in app/views/admin/dashboard/index.html.slim
+section.content-header
+  h1 Admin::Dashboard#index
+section.content
+  p Find me in app/views/admin/dashboard/index.html.slim
