--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -5,6 +5,25 @@ html
 
     = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'admin', 'data-turbolinks-track': 'reload'
+    = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
 
-  body
-    = yield
+  body.hold-transition.skin-black.sidebar-mini
+    .wrapper
+      / TODO: Move to shared/_header
+      header.main-header
+        / TODO: Replace TGDF Logo
+        = link_to admin_root_path, class: 'logo' do
+          span.logo-mini
+            b A
+            | LT
+          span.logo-lg
+            b Admin
+            | LTE
+        nav.navbar.navbar-static-top
+          .navbar-custom-menu
+            / TODO: Add top nav items
+      / TODO: Move to shared/_sidebar
+      aside.main-sidebar
+        section.sidebar
+      .content-wrapper
+        = yield
