--- a/app/views/admin/shared/_header.html.slim
+++ b/app/views/admin/shared/_header.html.slim
@@ -9,4 +9,22 @@ header.main-header
       | LTE
   nav.navbar.navbar-static-top
     .navbar-custom-menu
-      / TODO: Add top nav items
+      ul.nav.navbar-nav
+        li.dropdown.notifications-menu
+          = link_to '#', class: 'dropdown-toggle', data: { toggle: 'dropdown' } do
+            = fa_icon 'sitemap'
+            | &nbsp;
+            span.hidden-xs = current_site.name
+          ul.dropdown-menu
+            li.header =  t('.all_sites')
+            / TODO: Create helper to build it
+            li = link_to admin_root_url(host: Settings.site.default_domain) do
+              = fa_icon('star')
+              | &nbsp;
+              = Settings.site.name
+            - @navbar_sites.each do |site|
+              li = link_to admin_root_url(host: site.domain) do
+                = fa_icon('square')
+                | &nbsp;
+                = site.name
+            li.footer = link_to t('.view_all'), root_path
