Add admin sites list view

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -2,3 +2,12 @@
 @import 'bootstrap/dist/css/bootstrap';
 @import 'admin-lte/dist/css/AdminLTE';
 @import 'admin-lte/dist/css/skins/skin-black';
+
+// Base
+
+// Mixins
+
+// Modules
+@import 'admin/modules/table'
+
+// Layouts
