--- a/app/views/admin/sites/_form.html.slim
+++ b/app/views/admin/sites/_form.html.slim
@@ -2,5 +2,6 @@
   = admin_box_body do
     = f.input :name
     = f.input :domain
+    = f.input :tenant_name if @site.new_record?
   = admin_box_footer do
     = f.submit class: 'btn btn-primary'
