--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -9,3 +9,7 @@ aside.main-sidebar
         = admin_sidebar_treeview t('.sites'), icon: 'sitemap' do
           = admin_sidebar_item t('.list'), admin_sites_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_site_path, icon: 'plus'
+      = admin_sidebar_header t('.general')
+      = admin_sidebar_treeview t('.news'), icon: 'newspaper-o' do
+        = admin_sidebar_item t('.list'), admin_news_index_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_news_path, icon: 'plus'
