Add create news feature

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -8,6 +8,7 @@
 // Mixins
 
 // Modules
-@import 'admin/modules/table'
+@import 'admin/modules/table';
+@import 'admin/modules/ckeditor';
 
 // Layouts
