--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -5,6 +5,8 @@ html
 
     = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag    'https://use.fontawesome.com/b2e3e84e95.css', media: 'all'
+
+    = javascript_include_tag    'https://cdn.ckeditor.com/ckeditor5/1.0.0-alpha.1/classic/ckeditor.js'
     = javascript_include_tag 'admin', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag    'admin', 'data-turbolinks-track': 'reload'
 
