Add admin preview news feature

--- a/app/views/admin/news/index.html.slim
+++ b/app/views/admin/news/index.html.slim
@@ -3,7 +3,6 @@
   .row
     .col-md-12
       = admin_box do
-        = admin_box_header t('.news'), class: 'with-border'
         = admin_box_body class: 'no-padding' do
           table.table.table-striped
             thead
@@ -12,7 +11,7 @@
                 th = t('.title')
                 th = t('.author')
                 th = t('.status')
-                th = t('.actions')
+                th.col-md-3 = t('.actions')
             tbody
               = render @news
 
