--- a/app/views/admin/news/_news.html.slim
+++ b/app/views/admin/news/_news.html.slim
@@ -6,4 +6,5 @@ tr
   td
     .btn-group
       / TODO: Create helper
+      = link_to t('.preview'), preview_admin_news_path(news), class: 'btn btn-primary', target: '_blank'
       = link_to t('.destroy'), admin_news_path(news), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
