Add status column for news

--- a/app/views/admin/news/_form.html.slim
+++ b/app/views/admin/news/_form.html.slim
@@ -2,6 +2,7 @@
   = admin_box_body do
     = f.input :title
     = f.input :slug
+    = f.input :status, collection: ['draft', 'published']
     = f.input :content, input_html: { data: { editor: true }, rows: 20 }
   = admin_box_footer do
     = f.submit class: 'btn btn-primary'
