--- a/app/views/admin/news/_form.html.slim
+++ b/app/views/admin/news/_form.html.slim
@@ -1,8 +1,10 @@
-= simple_form_for [:admin, @news] do |f|
-  = admin_box_body do
-    = f.input :title
-    = f.input :slug
-    = f.input :status, collection: ['draft', 'published']
-    = f.input :content, input_html: { data: { editor: true }, rows: 20 }
-  = admin_box_footer do
-    = f.submit class: 'btn btn-primary'
+- Globalize.with_locale(admin_current_resource_locale) do
+  = simple_form_for [:admin, @news] do |f|
+    = admin_box_body do
+      = f.input :title
+      = f.input :slug
+      = f.input :status, collection: ['draft', 'published']
+      = f.input :content, as: :text, input_html: { data: { editor: true }, rows: 20 }
+      = f.hidden_field :locale, value: admin_current_resource_locale
+    = admin_box_footer do
+      = f.submit class: 'btn btn-primary'
