--- a/app/views/admin/news/preview.html.slim
+++ b/app/views/admin/news/preview.html.slim
@@ -1,2 +1,3 @@
-h1 = @news.title
-= sanitize @news.content
+- Globalize.with_locale(current_locale) do
+  h1 = @news.title
+  = sanitize @news.content
