--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -13,3 +13,9 @@ aside.main-sidebar
       = admin_sidebar_treeview t('.news'), icon: 'newspaper-o' do
         = admin_sidebar_item t('.list'), admin_news_index_path, icon: 'list'
         = admin_sidebar_item t('.new'), new_admin_news_path, icon: 'plus'
+      - if tenant_site?
+        = admin_sidebar_treeview t('.partner'), icon: 'handshake-o'
+          = admin_sidebar_item t('.list'), admin_partners_path, icon: 'list'
+          = admin_sidebar_item t('.new'), new_admin_partner_path, icon: 'plus'
+          = admin_sidebar_item t('.types'), admin_partner_types_path, icon: 'folder-o'
+          = admin_sidebar_item t('.new_type'), new_admin_partner_type_path, icon: 'plus'
