--- a/app/views/admin/partners/edit.html.slim
+++ b/app/views/admin/partners/edit.html.slim
@@ -1,4 +1,4 @@
-= admin_page_header t('.edit'), t('.edit_partner_type')
+= admin_page_header t('.edit'), t('.edit_partner')
 .content
   .row
     .col-md-12
