--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -19,3 +19,8 @@ aside.main-sidebar
           = admin_sidebar_item t('.new'), new_admin_partner_path, icon: 'plus'
           = admin_sidebar_item t('.types'), admin_partner_types_path, icon: 'folder-o'
           = admin_sidebar_item t('.new_type'), new_admin_partner_type_path, icon: 'plus'
+        = admin_sidebar_treeview t('.sponsor'), icon: 'money'
+          = admin_sidebar_item t('.list'), admin_sponsors_path, icon: 'list'
+          = admin_sidebar_item t('.new'), new_admin_sponsor_path, icon: 'plus'
+          = admin_sidebar_item t('.levels'), admin_sponsor_levels_path, icon: 'diamond'
+          = admin_sidebar_item t('.new_level'), new_admin_sponsor_level_path, icon: 'plus'
