--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -24,3 +24,6 @@ aside.main-sidebar
           = admin_sidebar_item t('.new'), new_admin_sponsor_path, icon: 'plus'
           = admin_sidebar_item t('.levels'), admin_sponsor_levels_path, icon: 'diamond'
           = admin_sidebar_item t('.new_level'), new_admin_sponsor_level_path, icon: 'plus'
+        = admin_sidebar_treeview t('.speaker'), icon: 'users'
+          = admin_sidebar_item t('.list'), admin_speakers_path, icon: 'list'
+          = admin_sidebar_item t('.new'), new_admin_speaker_path, icon: 'plus'
