--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,8 +1,8 @@
-/ TODO: Implement front-end
-h1 TGDF
-
-section#news
-  - @news.each do |news|
-    article
-      h2 = news.title
-      = sanitize news.content
+.main-slider
+  #rev_slider_one_wrapper.rev_slider_wrapper.fullwidthbanner-container[data-source="gallery"]
+    #rev_slider_one.rev_slider.fullwidthabanner[data-version="5.4.1"]
+      ul
+        li
+          = image_tag 'sliders/slide_1.jpg'
+= render 'pages/index/about'
+= render 'pages/index/news'
