Add new thumbnail support

--- a/app/views/pages/index/_news.html.slim
+++ b/app/views/pages/index/_news.html.slim
@@ -13,7 +13,7 @@ section.latest-blog-area
                 .col-md-6
                   .img-holder
                     / TODO: News Thumbnail
-                    = image_tag('http://example.com/jpg')
+                    = image_tag news.thumbnail_url(:thumb)
                     .overlay-style-one
                       .box
                         .content
