--- a/app/views/admin/news/_form.html.slim
+++ b/app/views/admin/news/_form.html.slim
@@ -5,6 +5,11 @@
       = f.input :slug
       = f.input :status, collection: ['draft', 'published']
       = f.input :content, as: :text, input_html: { data: { editor: true }, rows: 20 }
+      = f.input :thumbnail do
+        = f.input_field :thumbnail
+        - if @news.thumbnail.present?
+          = image_tag @news.thumbnail_url(:thumb)
+          = f.input :remove_thumbnail, as: :boolean
       = f.hidden_field :locale, value: admin_current_resource_locale
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
