Implement simple breadcrumb

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,5 +14,6 @@ html
       / TODO: Add preloader javascript
       / .preloader
       = render 'shared/nav'
+      = render_breadcrumb
       = yield
       = render 'shared/footer'
