--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title = t('site_name')
+    title = page_title
     meta[name="viewport" content="width=device-width, initial-scale=1"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge"]
     = csrf_meta_tags
