--- a/app/views/admin/news/preview.html.slim
+++ b/app/views/admin/news/preview.html.slim
@@ -1,3 +1,3 @@
-- Globalize.with_locale(current_locale) do
+- Mobility.with_locale(current_locale) do
   h1 = @news.title
   = sanitize @news.content
