--- a/app/views/admin/agendas/_form.html.slim
+++ b/app/views/admin/agendas/_form.html.slim
@@ -1,8 +1,7 @@
-- Globalize.with_locale(admin_current_resource_locale) do
+- Mobility.with_locale(admin_current_resource_locale) do
   = simple_form_for [:admin, @agenda] do |f|
     = admin_box_body do
-      = f.input :subject
+      = f.input :subject, as: :string
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
-      = f.hidden_field :locale, value: admin_current_resource_locale
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
