--- a/app/views/admin/speakers/_form.html.slim
+++ b/app/views/admin/speakers/_form.html.slim
@@ -1,13 +1,12 @@
-- Globalize.with_locale(admin_current_resource_locale) do
+- Mobility.with_locale(admin_current_resource_locale) do
   = simple_form_for [:admin, @speaker] do |f|
     = admin_box_body do
-      = f.input :name
+      = f.input :name, as: :string
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
       = f.input :avatar do
         = f.input_field :avatar
         -if @speaker.avatar.present?
           = image_tag @speaker.avatar
           = f.input :remove_avatar, as: :boolean
-      = f.hidden_field :locale, value: admin_current_resource_locale
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
