--- a/app/views/admin/sponsor_levels/_form.html.slim
+++ b/app/views/admin/sponsor_levels/_form.html.slim
@@ -1,7 +1,6 @@
-- Globalize.with_locale(admin_current_resource_locale) do
+- Mobility.with_locale(admin_current_resource_locale) do
   = simple_form_for [:admin, @level] do |f|
     = admin_box_body do
-      = f.input :name
-      = f.hidden_field :locale, value: admin_current_resource_locale
+      = f.input :name, as: :string
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
