--- a/app/views/admin/sponsors/_form.html.slim
+++ b/app/views/admin/sponsors/_form.html.slim
@@ -1,7 +1,7 @@
-- Globalize.with_locale(admin_current_resource_locale) do
+- Mobility.with_locale(admin_current_resource_locale) do
   = simple_form_for [:admin, @sponsor] do |f|
     = admin_box_body do
-      = f.input :name
+      = f.input :name, as: :string
       = f.input :url
       = f.association :level
       = f.input :logo do
@@ -9,6 +9,5 @@
         - if @sponsor.logo.present?
           = image_tag @sponsor.logo
           = f.input :remove_logo, as: :boolean
-      = f.hidden_field :locale, value: admin_current_resource_locale
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
