--- a/app/views/admin/sites/_form.html.slim
+++ b/app/views/admin/sites/_form.html.slim
@@ -1,9 +1,10 @@
-= simple_form_for [:admin, @site] do |f|
-  = admin_box_body do
-    / TODO: Upgrade mobility to support jsonb in form
-    = f.input :name, as: :string
-    = f.input :domain
-    = f.input :tenant_name if @site.new_record?
-    = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
-  = admin_box_footer do
-    = f.submit class: 'btn btn-primary'
+- Mobility.with_locale(admin_current_resource_locale) do
+  = simple_form_for [:admin, @site] do |f|
+    = admin_box_body do
+      / TODO: Upgrade mobility to support jsonb in form
+      = f.input :name, as: :string
+      = f.input :domain
+      = f.input :tenant_name if @site.new_record?
+      = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
+    = admin_box_footer do
+      = f.submit class: 'btn btn-primary'
