Allow user change logo per site

--- a/app/views/admin/sites/_form.html.slim
+++ b/app/views/admin/sites/_form.html.slim
@@ -4,6 +4,7 @@
       / TODO: Upgrade mobility to support jsonb in form
       = f.input :name, as: :string
       = f.input :domain
+      = f.input :logo, as: :file
       = f.input :tenant_name if @site.new_record?
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
     = admin_box_footer do
