--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -4,7 +4,7 @@ section.mainmenu-area.stricky.stricky-fixed
       .col-lg-12.clearfix
         .logo.pull-left
           = link_to root_path
-            = image_tag 'logo.png', style: 'max-height: 60px;'
+            = image_tag current_site.logo_url
         nav.main-menu.pull-left
           .navbar-header
             button.navbar-toggle[type="button" data-toggle="collapse" data-target=".navbar-collapse"]
