--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -13,6 +13,9 @@ aside.main-sidebar
       = admin_sidebar_treeview t('.news'), icon: 'newspaper-o' do
         = admin_sidebar_item t('.list'), admin_news_index_path, icon: 'list'
         = admin_sidebar_item t('.new'), new_admin_news_path, icon: 'plus'
+      = admin_sidebar_treeview t('.slider'), icon: 'picture-o' do
+        = admin_sidebar_item t('.list'), admin_sliders_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_slider_path, icon: 'plus'
       - if tenant_site?
         = admin_sidebar_treeview t('.partner'), icon: 'handshake-o'
           = admin_sidebar_item t('.list'), admin_partners_path, icon: 'list'
