--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -2,7 +2,12 @@
   #rev_slider_one_wrapper.rev_slider_wrapper.fullwidthbanner-container[data-source="gallery"]
     #rev_slider_one.rev_slider.fullwidthabanner[data-version="5.4.1"]
       ul
-        li
-          = image_tag 'sliders/slide_1.jpg'
+        / TODO: User render collection or empty style
+        - if @sliders.empty?
+          li
+            = image_tag 'sliders/slide_1.jpg'
+        - @sliders.each do |slider|
+          li
+            = image_tag slider.image_url(:large)
 = render 'pages/index/about'
 = render 'pages/index/news'
