--- a/app/views/pages/index/_ticket.html.slim
+++ b/app/views/pages/index/_ticket.html.slim
@@ -10,11 +10,10 @@ section.pricing-plan-area
             .single-price-box
               .table-header
                 .top
-                  h3 = t("ticket.type.#{plan}")
+                  h3 = ticket_name_for(plan)
                 .package
                   h1
-                    b NTD $
-                    | &nbsp;1000
+                    b NTD $ #{ticket_price_for(plan)}
                   h3 = t("ticket.description.#{plan}")
               .table-footer
-                a.thm-btn.gra[href="#"] = t('ticket.buy_now')
+                = link_to t('ticket.buy_now'), current_site.ticket_buy_link, class: 'thm-btn gra', target: '_blank'
