--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -33,3 +33,4 @@ aside.main-sidebar
         = admin_sidebar_treeview t('.agenda'), icon: 'file-text'
           = admin_sidebar_item t('.list'), admin_agendas_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_agenda_path, icon: 'plus'
+        = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
