Fixed #74, numbered list not show in news content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,3 +104,20 @@ body {
   }
 }
 
+.text-holder {
+  ul, ol {
+    padding-left: 40px;
+  }
+
+  ul {
+    list-style: initial;
+  }
+
+  ol {
+    list-style: decimal;
+  }
+
+  li {
+    list-style: inherit;
+  }
+}
