Setup breadcrumb feature

--- a/app/views/news/show.html.slim
+++ b/app/views/news/show.html.slim
@@ -1,5 +1,6 @@
 - title @news.title
 - banner @news.thumbnail_url(:large)
+- breadcrumb :news, @news
 
 section#blog-area.blog-single-area
   .container
