--- a/app/views/admin/sliders/_form.html.slim
+++ b/app/views/admin/sliders/_form.html.slim
@@ -4,5 +4,6 @@
       = f.input_field :image
       -if @slider.image.present?
         = image_tag @slider.image_url(:thumb)
+    = f.input :language, collection: Slider.languages.map { |lang, _| [t("locale.name.#{lang}"), lang] }.to_h, default: 0
   = admin_box_footer do
     = f.submit class: 'btn btn-primary'
