--- a/app/views/admin/sliders/_slider.html.slim
+++ b/app/views/admin/sliders/_slider.html.slim
@@ -1,6 +1,7 @@
 tr
   td = slider.id
   td = image_tag slider.image_url(:thumb)
+  td = t("locale.name.#{slider.language}")
   td
     .btn-group
       = link_to t('.edit'), edit_admin_slider_path(slider), class: 'btn btn-primary'
