--- a/app/views/admin/sliders/index.html.slim
+++ b/app/views/admin/sliders/index.html.slim
@@ -9,6 +9,7 @@
               tr
                 th.table__id-column #
                 th = t('.image')
+                th = t('.language')
                 th.col-md-3 = t('.actions')
             tbody
               = render @sliders
