give ticket section an ID and make the buy ticket button go to that anchor

--- a/app/views/pages/index/_ticket.html.slim
+++ b/app/views/pages/index/_ticket.html.slim
@@ -1,4 +1,4 @@
-section.pricing-plan-area
+section#ticket-section.pricing-plan-area
   .container
     .sec-title.text-center
       .underlay.text-center
