--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -18,4 +18,4 @@ section.mainmenu-area.stricky.stricky-fixed
         .mainmenu-right-box.pull-right
           = language_toggle_button
           .buy-ticket-button
-            = link_to t('.buy_ticket'), root_path, class: 'thm-btn'
+            = link_to t('.buy_ticket'), root_path+"#ticket-section", class: 'thm-btn'
