made the navbar buy ticket button go to the absolute path of KKTIX page

--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -18,4 +18,4 @@ section.mainmenu-area.stricky.stricky-fixed
         .mainmenu-right-box.pull-right
           = language_toggle_button
           .buy-ticket-button
-            = link_to t('.buy_ticket'), "#ticket-section", class: 'thm-btn'
+            = link_to t('.buy_ticket'), "https://tgdf.kktix.cc/events/2018tgdf", class: 'thm-btn'
