--- a/app/views/admin/partner_types/index.html.slim
+++ b/app/views/admin/partner_types/index.html.slim
@@ -9,6 +9,7 @@
               tr
                 th.table__id-column #
                 th = t('.name')
+                th = t('.order')
                 th.col-md-3 = t('.actions')
             tbody
               = render @types
