--- a/app/views/admin/partners/_partner.html.slim
+++ b/app/views/admin/partners/_partner.html.slim
@@ -2,6 +2,7 @@ tr
   td = partner.id
   td = partner.name
   td = partner.type.name
+  td = partner.order
   td
     .btn-group
       = link_to t('.edit'), edit_admin_partner_path(partner), class: 'btn btn-primary'
