--- a/app/views/admin/partner_types/_partner_type.html.slim
+++ b/app/views/admin/partner_types/_partner_type.html.slim
@@ -1,6 +1,7 @@
 tr
   td = partner_type.id
   td = partner_type.name
+  td = partner_type.order
   td
     .btn-group
       = link_to t('.edit'), edit_admin_partner_type_path(partner_type), class: 'btn btn-primary'
