Closed #34, Add order field for sponsor and sponsor level

--- a/app/views/admin/sponsors/_sponsor.html.slim
+++ b/app/views/admin/sponsors/_sponsor.html.slim
@@ -2,6 +2,7 @@ tr
   td = sponsor.id
   td = sponsor.name
   td = sponsor.level.name
+  td = sponsor.order
   td
     .btn-group
       = link_to t('.edit'), edit_admin_sponsor_path(sponsor), class: 'btn btn-primary'
