--- a/app/views/admin/sponsor_levels/_sponsor_level.html.slim
+++ b/app/views/admin/sponsor_levels/_sponsor_level.html.slim
@@ -1,6 +1,7 @@
 tr
   td = sponsor_level.id
   td = sponsor_level.name
+  td = sponsor_level.order
   td
     .btn-group
       = link_to t('.edit'), edit_admin_sponsor_level_path(sponsor_level), class: 'btn btn-primary'
