--- a/app/views/admin/sponsors/index.html.slim
+++ b/app/views/admin/sponsors/index.html.slim
@@ -10,6 +10,7 @@
                 th.table__id-column #
                 th = t('.name')
                 th = t('.level')
+                th = t('.order')
                 th.col-md-3 = t('.actions')
             tbody
               = render @sponsors
