Prepare for partner display for home page

--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -13,3 +13,4 @@
 / TODO: Refactor - show ticket information only per-year sites
 = render 'pages/index/ticket' unless current_site.new_record?
 = render 'pages/index/news'
+= render 'pages/index/partner' if Partner.any?
