--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -15,6 +15,7 @@ section.mainmenu-area.stricky.stricky-fixed
             ul.navigation.clearfix
               = nav_item t('.home'), root_path
               = nav_item t('.news'), news_index_path
+              = nav_item t('.speakers'), speakers_path
         .mainmenu-right-box.pull-right
           = language_toggle_button
           .buy-ticket-button
