Add title for speaker

--- a/app/views/speakers/index.html.slim
+++ b/app/views/speakers/index.html.slim
@@ -22,4 +22,4 @@ section.team-area-v2
 
             .text-holder.text-center
               h3 = speaker.name
-              span My title
+              span = speaker.title
