Add select2 plugin to better pick agenda and speaker

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -2,6 +2,9 @@
 @import 'bootstrap/dist/css/bootstrap';
 @import 'admin-lte/dist/css/AdminLTE';
 @import 'admin-lte/dist/css/skins/skin-black';
+@import 'select2';
+@import 'select2-bootstrap';
+@import 'admin-lte/dist/css/alt/AdminLTE-select2.min';
 
 // Base
 
