--- a/app/views/speakers/index.html.slim
+++ b/app/views/speakers/index.html.slim
@@ -8,18 +8,19 @@ section.team-area-v2
       .underlay.text-center
         h2 = t('.speakers')
       h1 = t('.speakers')
-    .row
-      - @speakers.each do |speaker|
-        .col-lg-3.col-md-6.col-sm-6.col-xs-12
-          .single-team-member
-            .img-holder
-              = image_tag speaker.avatar_url(:v1)
-              .overlay-style-one
-                .box
-                  .content
-                    .text
-                      p = truncate strip_tags(speaker.description), length: 150
+    - @speakers.in_groups_of(4) do |speakers|
+      .row
+        - speakers.compact.each do |speaker|
+          .col-lg-3.col-md-6.col-sm-6.col-xs-12
+            .single-team-member
+              .img-holder
+                = image_tag speaker.avatar_url(:v1)
+                .overlay-style-one
+                  .box
+                    .content
+                      .text
+                        p = truncate strip_tags(speaker.description), length: 150
 
-            .text-holder.text-center
-              h3 = link_to speaker.name, speaker
-              span = speaker.title
+              .text-holder.text-center
+                h3 = link_to speaker.name, speaker
+                span = speaker.title
