--- a/app/views/speakers/index.html.slim
+++ b/app/views/speakers/index.html.slim
@@ -14,12 +14,8 @@ section.team-area-v2
           .col-lg-3.col-md-6.col-sm-6.col-xs-12
             .single-team-member
               .img-holder
-                = image_tag speaker.avatar_url(:v1)
-                .overlay-style-one
-                  .box
-                    .content
-                      .text
-                        p = truncate strip_tags(speaker.description), length: 150
+                = link_to speaker do
+                  = image_tag speaker.avatar_url(:v1)
 
               .text-holder.text-center
                 h3 = link_to speaker.name, speaker
