--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -35,6 +35,8 @@ aside.main-sidebar
           = admin_sidebar_item t('.new'), new_admin_agenda_path, icon: 'plus'
           = admin_sidebar_item t('.rooms'), admin_rooms_path, icon: 'columns'
           = admin_sidebar_item t('.new_room'), new_admin_room_path, icon: 'plus'
+          = admin_sidebar_item t('.days'), admin_agenda_days_path, icon: 'calendar'
+          = admin_sidebar_item t('.new_day'), new_admin_agenda_day_path, icon: 'plus'
           = admin_sidebar_item t('.times'), admin_agenda_times_path, icon: 'clock-o'
           = admin_sidebar_item t('.new_time'), new_admin_agenda_time_path, icon: 'plus'
         = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
