--- a/app/views/admin/agenda_times/index.html.slim
+++ b/app/views/admin/agenda_times/index.html.slim
@@ -9,6 +9,7 @@
               tr
                 th.table__id-column #
                 th = t('.label')
+                th = t('.day')
                 th = t('.order')
                 th.col-md-3 = t('.actions')
             tbody
