Display agneda by day and time

--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -16,6 +16,7 @@ section.mainmenu-area.stricky.stricky-fixed
               = nav_item t('.home'), root_path
               = nav_item t('.news'), news_index_path
               = nav_item t('.speakers'), speakers_path
+              = nav_item t('.agenda'), agenda_path
         .mainmenu-right-box.pull-right
           = language_toggle_button
           .buy-ticket-button
