--- a/app/views/admin/agendas/_form.html.slim
+++ b/app/views/admin/agendas/_form.html.slim
@@ -4,5 +4,7 @@
       = f.input :subject, as: :string
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
       = f.association :speakers, input_html: { class: 'select2' }
+      = f.association :room
+      = f.association :time
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
