Add support for google analytics

--- a/app/views/admin/options/edit.html.slim
+++ b/app/views/admin/options/edit.html.slim
@@ -6,6 +6,7 @@
         = simple_form_for current_site, url: admin_options_path do |f|
           = admin_box_header t('.edit_options')
           = admin_box_body do
+            = f.input :google_analytics_id
             = f.input :ticket_early_personal_price, as: :integer
             = f.input :ticket_personal_price, as: :integer
             = f.input :ticket_early_group_price, as: :integer
