--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,3 +18,4 @@ html
       = render_breadcrumb
       = yield
       = render 'shared/footer'
+      = render 'shared/google_analytics' if current_site.google_analytics_id.present?
