Fixed #123 agenda time still TBA

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -136,4 +136,6 @@ body {
   color: #ffffff;
 }
 
-
+.single-speaker-area .bottom-content .schedule .schedule-single .inner-content .left .time {
+  width: 255px;
+}
