Fix agenda without room

--- a/app/views/agendas/_agenda.html.slim
+++ b/app/views/agendas/_agenda.html.slim
@@ -1,6 +1,6 @@
 .agenda
   h3 = link_to agenda.subject, agenda.speakers.first
-  p = agenda.room.name
+  p = agenda.room&.name
   p
     .right
       - agenda.speakers.each do |speaker|
