--- a/app/views/admin/sponsors/_form.html.slim
+++ b/app/views/admin/sponsors/_form.html.slim
@@ -4,6 +4,7 @@
       = f.input :name, as: :string
       = f.input :url
       = f.association :level
+      = f.input :description, as: :text
       = f.input :order
       = f.input :logo do
         = f.input_field :logo
