Implement sponsor page

--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -17,6 +17,7 @@ section.mainmenu-area.stricky.stricky-fixed
               = nav_item t('.news'), news_index_path
               = nav_item t('.speakers'), speakers_path
               = nav_item t('.agenda'), agenda_path
+              = nav_item t('.sponsors'), sponsors_path
         .mainmenu-right-box.pull-right
           = language_toggle_button
           .buy-ticket-button
