--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -12,4 +12,5 @@
 = render 'pages/index/about'
 / TODO: Refactor - show ticket information only per-year sites
 = render 'pages/index/ticket' unless current_site.new_record?
+= render 'pages/index/partner' if @partner_types.any?
 = render 'pages/index/news'
