--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -17,20 +17,20 @@ aside.main-sidebar
         = admin_sidebar_item t('.list'), admin_sliders_path, icon: 'list'
         = admin_sidebar_item t('.new'), new_admin_slider_path, icon: 'plus'
       - if tenant_site?
-        = admin_sidebar_treeview t('.partner'), icon: 'handshake-o'
+        = admin_sidebar_treeview t('.partner'), icon: 'handshake-o' do
           = admin_sidebar_item t('.list'), admin_partners_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_partner_path, icon: 'plus'
           = admin_sidebar_item t('.types'), admin_partner_types_path, icon: 'folder-o'
           = admin_sidebar_item t('.new_type'), new_admin_partner_type_path, icon: 'plus'
-        = admin_sidebar_treeview t('.sponsor'), icon: 'money'
+        = admin_sidebar_treeview t('.sponsor'), icon: 'money' do
           = admin_sidebar_item t('.list'), admin_sponsors_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_sponsor_path, icon: 'plus'
           = admin_sidebar_item t('.levels'), admin_sponsor_levels_path, icon: 'diamond'
           = admin_sidebar_item t('.new_level'), new_admin_sponsor_level_path, icon: 'plus'
-        = admin_sidebar_treeview t('.speaker'), icon: 'users'
+        = admin_sidebar_treeview t('.speaker'), icon: 'users' do
           = admin_sidebar_item t('.list'), admin_speakers_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_speaker_path, icon: 'plus'
-        = admin_sidebar_treeview t('.agenda'), icon: 'file-text'
+        = admin_sidebar_treeview t('.agenda'), icon: 'file-text' do
           = admin_sidebar_item t('.list'), admin_agendas_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_agenda_path, icon: 'plus'
           = admin_sidebar_item t('.rooms'), admin_rooms_path, icon: 'columns'
@@ -39,4 +39,7 @@ aside.main-sidebar
           = admin_sidebar_item t('.new_day'), new_admin_agenda_day_path, icon: 'plus'
           = admin_sidebar_item t('.times'), admin_agenda_times_path, icon: 'clock-o'
           = admin_sidebar_item t('.new_time'), new_admin_agenda_time_path, icon: 'plus'
+        = admin_sidebar_treeview t('.indie_space'), icon: 'gamepad' do
+          = admin_sidebar_item t('.list'), admin_games_path, icon: 'list'
+          = admin_sidebar_item t('.new'), new_admin_game_path, icon: 'plus'
         = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
