--- a/app/views/admin/sliders/index.html.slim
+++ b/app/views/admin/sliders/index.html.slim
@@ -10,6 +10,7 @@
                 th.table__id-column #
                 th = t('.image')
                 th = t('.language')
+                th = t('.page')
                 th.col-md-3 = t('.actions')
             tbody
               = render @sliders
