--- a/app/views/admin/sliders/_form.html.slim
+++ b/app/views/admin/sliders/_form.html.slim
@@ -5,5 +5,6 @@
       -if @slider.image.present?
         = image_tag @slider.image_url(:thumb)
     = f.input :language, collection: Slider.languages.map { |lang, _| [t("locale.name.#{lang}"), lang] }.to_h, default: 0
+    = f.input :page, collection: Slider.pages.map { |page, _| [t("shared.nav.#{page}"), page] }.to_h, default: 0
   = admin_box_footer do
     = f.submit class: 'btn btn-primary'
