--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -18,6 +18,7 @@ section.mainmenu-area.stricky.stricky-fixed
               = nav_item t('.speakers'), speakers_path
               = nav_item t('.agenda'), agenda_path
               = nav_item t('.sponsors'), sponsors_path
+              = nav_item t('.indie_spaces'), indie_spaces_path
         .mainmenu-right-box.pull-right
           = language_toggle_button
           .buy-ticket-button
